--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -776,13 +776,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "2188b917-8974-4e4c-be39-8d15b2a0c05e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([47, 50, 67, 70, 70, 12, 86, 24, 39, 90])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a + 3 "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "1bdc3dd5-4d22-486e-a90d-3e854b2f2484",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 85184, 103823, 262144, 300763, 300763,    729, 571787,   9261,\n",
+       "        46656, 658503])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a ** 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "7164d571-7c4c-4c60-a9ec-25f2de27d93f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 85184, 103823, 262144, 300763, 300763,    729, 571787,   9261,\n",
+       "        46656, 658503])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.__pow__(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ba7a984-b40a-44c5-b3c4-33e9da652076",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
