--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -840,12 +840,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ba7a984-b40a-44c5-b3c4-33e9da652076",
+   "cell_type": "markdown",
+   "id": "f12d62e5-834d-4e9a-9190-cc0a5b61c483",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Exercise: NumPy basics\n",
+    "\n",
+    "1. Create two NumPy arrays -- one with the minimum temps for the next 10 days, and the other with the maximum temps for the next 10 days.\n",
+    "2. Find the mean high temp in the next 10 days.\n",
+    "3. Find the mean high temp in the next 3 days.\n",
+    "4. Find the mean of the difference in temperatures in the next few days.\n",
+    "5. "
+   ]
   }
  ],
  "metadata": {
