--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -850,8 +850,16 @@
     "2. Find the mean high temp in the next 10 days.\n",
     "3. Find the mean high temp in the next 3 days.\n",
     "4. Find the mean of the difference in temperatures in the next few days.\n",
-    "5. "
+    "5. Convert the two arrays to Fahrenheit, then find the mean difference between temperatures in the coming days."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56197277-c4e1-43bd-8a63-5f90ad3272c7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
