--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -859,7 +859,10 @@
    "id": "56197277-c4e1-43bd-8a63-5f90ad3272c7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "min_temps = np.array([13, 12, 12, 11, 11, 11, 10, 12, 10, 8])\n",
+    "max_temps = np.array([19, 20, 18, 22, 24, 22, 19, 18, 16, "
+   ]
   }
  ],
  "metadata": {
