--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -855,14 +855,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "56197277-c4e1-43bd-8a63-5f90ad3272c7",
    "metadata": {},
    "outputs": [],
    "source": [
     "min_temps = np.array([13, 12, 12, 11, 11, 11, 10, 12, 10, 8])\n",
-    "max_temps = np.array([19, 20, 18, 22, 24, 22, 19, 18, 16, "
+    "max_temps = np.array([19, 20, 18, 22, 24, 22, 19, 18, 16, 15])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "47d3b5ae-e6ea-4cdf-b2c8-77aa24ce859d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19.3"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_temps.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "f248ba5d-7e2c-4bb5-9761-a040e9eaf146",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19.0"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_temps[:3].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "dddd600a-e66f-47ea-a0b3-839fb3aff7fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19.0"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# fancy indexing\n",
+    "max_temps[range(3)].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "b3ef98d3-d0c0-42ce-9231-6dd6894e574a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19.0"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_temps[[0, 1, 2]].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "32c4ae26-706d-4253-81af-d143e5549f21",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 8.,  9.,  7., 11., 13., 11.,  8.,  7.,  5.,  4.])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(max_temps - min_temps).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74e29849-165a-4de0-9651-6e9ccf10140f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
