--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -951,17 +951,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "id": "32c4ae26-706d-4253-81af-d143e5549f21",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 8.,  9.,  7., 11., 13., 11.,  8.,  7.,  5.,  4.])"
+       "8.3"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -972,8 +972,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "74e29849-165a-4de0-9651-6e9ccf10140f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([55.4, 53.6, 53.6, 51.8, 51.8, 51.8, 50. , 53.6, 50. , 46.4])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min_temps * (9/5) + 32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "7ba48108-eb25-47f6-9b87-c051e8b17fa6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([66.2, 68. , 64.4, 71.6, 75.2, 71.6, 66.2, 64.4, 60.8, 59. ])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_temps * (9/5) + 32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "c32a4f6f-d551-4fc3-915a-21c0662709ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14.940000000000001"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((max_temps * (9/5) + 32) - \n",
+    " (min_temps * (9/5) + 32)).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f41b860e-b361-400b-a1c9-c84f3be963c1",
    "metadata": {},
    "outputs": [],
    "source": []
