--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -1036,11 +1036,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "f41b860e-b361-400b-a1c9-c84f3be963c1",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([44, 47, 64, 67, 67,  9, 83, 21, 36, 87])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "1933a9d4-8555-4a7e-aa23-18bf67cb2592",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10, 20, 30, 40, 50])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([10, 20, 30, 40, 50])\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "70294632-59f4-46fe-a9d5-eb7f10a1538f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([30, 50])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[[2, 4]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "5bb5792d-97f8-487a-91fd-515c1710c119",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10, 40, 50])"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# what happens if I do this?\n",
+    "# this is a boolean index / mask index -- only where we have a True value do we get a result\n",
+    "a[ [True, False, False, True, True] ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3da4352b-b968-4a4a-b00b-bab3ae7e53eb",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# broadca"
+   ]
   }
  ],
  "metadata": {
