--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -1123,13 +1123,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "3da4352b-b968-4a4a-b00b-bab3ae7e53eb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True,  True, False, False, False])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# broadca"
+    "# broadcast with comparison operators\n",
+    "\n",
+    "a < 30"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "a47fed66-cb61-47e0-9b36-d2bb8cc17eb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False,  True, False, False])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a == 30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "634ed998-940e-4b8f-8680-7d3ac2cd9166",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10, 20])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# I can use this comparison + mask indexes to filter\n",
+    "\n",
+    "# 1. First, we execute a<30, and we get back a boolean array\n",
+    "# 2. \n",
+    "\n",
+    "a[a < 30]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e77c16a-76dc-456c-9ee6-9f7909e18cea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
