--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
    "id": "634ed998-940e-4b8f-8680-7d3ac2cd9166",
    "metadata": {},
    "outputs": [
@@ -1177,7 +1177,7 @@
        "array([10, 20])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1186,18 +1186,44 @@
     "# I can use this comparison + mask indexes to filter\n",
     "\n",
     "# 1. First, we execute a<30, and we get back a boolean array\n",
-    "# 2. \n",
+    "# 2. Then we use the resulting boolean array as a mask/boolean index on a\n",
+    "# 3. We get back a new array, based on a, where the condition was True\n",
     "\n",
     "a[a < 30]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "8e77c16a-76dc-456c-9ee6-9f7909e18cea",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([11, 11, 11, 10, 10,  8])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# I want to see all min temperatures less than 12 degrees\n",
+    "\n",
+    "min_temps[min_temps < 12]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67ac2882-cef3-485c-bcfe-910caa4ca25a",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# find the max temp on days when the min temp i"
+   ]
   }
  ],
  "metadata": {
