--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -1217,13 +1217,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "67ac2882-cef3-485c-bcfe-910caa4ca25a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([22, 24, 22, 19, 16, 15])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# find the max temp on days when the min temp i"
+    "# find the max temp on days when the min temp is < 12\n",
+    "\n",
+    "max_temps[min_temps < 12]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "298bea0d-9909-4368-8f94-7daac5510f09",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[70], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# what if I want two conditions together, using \"and\" or \"or\"?\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# for example: I want all of the minimum temps that are (a) < 12 and (b) odd\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m min_temps[\u001b[43mmin_temps\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m<\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m12\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01mand\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mmin_temps\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m%\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m==\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m]\n",
+      "\u001b[1;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
+     ]
+    }
+   ],
+   "source": [
+    "# what if I want two conditions together, using \"and\" or \"or\"?\n",
+    "\n",
+    "# for example: I want all of the minimum temps that are (a) < 12 and (b) odd\n",
+    "\n",
+    "min_temps[min_temps < 12 and min_temps % 2 == 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f12dcb62-107b-4041-a417-059aca01b172",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
