--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -1240,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 71,
    "id": "298bea0d-9909-4368-8f94-7daac5510f09",
    "metadata": {},
    "outputs": [
@@ -1251,7 +1251,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[70], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# what if I want two conditions together, using \"and\" or \"or\"?\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# for example: I want all of the minimum temps that are (a) < 12 and (b) odd\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m min_temps[\u001b[43mmin_temps\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m<\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m12\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01mand\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mmin_temps\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m%\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m==\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m]\n",
+      "Cell \u001b[1;32mIn[71], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# what if I want two conditions together, using \"and\" or \"or\"?\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# for example: I want all of the minimum temps that are (a) < 12 and (b) odd\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m min_temps[min_temps \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m12\u001b[39m \u001b[38;5;241m&\u001b[39m min_temps \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m]\n",
       "\u001b[1;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
      ]
     }
@@ -1261,7 +1261,7 @@
     "\n",
     "# for example: I want all of the minimum temps that are (a) < 12 and (b) odd\n",
     "\n",
-    "min_temps[min_temps < 12 and min_temps % 2 == 1]"
+    "min_temps[(min_temps < 12) & (min_temps % 2 == 1)]"
    ]
   },
   {
