--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -1240,20 +1240,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 73,
    "id": "298bea0d-9909-4368-8f94-7daac5510f09",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[71], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# what if I want two conditions together, using \"and\" or \"or\"?\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# for example: I want all of the minimum temps that are (a) < 12 and (b) odd\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m min_temps[min_temps \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m12\u001b[39m \u001b[38;5;241m&\u001b[39m min_temps \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m]\n",
-      "\u001b[1;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
-     ]
+     "data": {
+      "text/plain": [
+       "array([11, 11, 11])"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1261,13 +1260,39 @@
     "\n",
     "# for example: I want all of the minimum temps that are (a) < 12 and (b) odd\n",
     "\n",
-    "min_temps[(min_temps < 12) & (min_temps % 2 == 1)]"
+    "# \"and\" in NumPy is &\n",
+    "# \"or\" in NumPy is |\n",
+    "# \"not\" in NumPy is ~\n",
+    "\n",
+    "min_temps[(min_temps < 12) & \n",
+    "          (min_temps % 2 == 1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "f12dcb62-107b-4041-a417-059aca01b172",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 5, 5, 5, 5, 0, 5, 5])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(min_temps < 12) * 5"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f12dcb62-107b-4041-a417-059aca01b172",
+   "id": "97aa2b47-2420-411f-a080-3be4065504c1",
    "metadata": {},
    "outputs": [],
    "source": []
