--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -1291,8 +1291,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "97aa2b47-2420-411f-a080-3be4065504c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True, False, False,  True,  True,  True,  True, False,  True,\n",
+       "        True])"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(min_temps < 12) + (min_temps % 2 == 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "051a4ba0-627d-4c02-a8c8-b93959704f8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "False * False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "27d2566b-1127-4b6a-b939-98728a4bc7c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([13, 12, 12, 11, 11, 11, 10, 12, 10,  8])"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min_temps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6989a9c6-3336-40c3-a1ac-0afc24af1b67",
    "metadata": {},
    "outputs": [],
    "source": []
