--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -1354,9 +1354,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a527dc5e-2c84-4eea-a613-5bdad656098a",
+   "metadata": {},
+   "source": [
+    "# Exercise: NumPy operations and conditions\n",
+    "\n",
+    "1. Create an array of 20 random integers from 0-100.\n",
+    "2. What is the largest even number?\n",
+    "3. What is the mean of the odd numbers?\n",
+    "4. What numbers are greater than the mean?\n",
+    "5. What numbers are greater than the mean + the standard deviation?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6989a9c6-3336-40c3-a1ac-0afc24af1b67",
+   "id": "da763e8a-58e3-44b3-bdf3-052a403812ee",
    "metadata": {},
    "outputs": [],
    "source": []
