--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -1369,11 +1369,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "da763e8a-58e3-44b3-bdf3-052a403812ee",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "np.random.seed(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "54069a4a-f2c5-4f8b-b6da-4c6c258967d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([44, 47, 64, 67, 67,  9, 83, 21, 36, 87, 70, 88, 88, 12, 58, 65, 39,\n",
+       "       87, 46, 88])"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.random.randint(0, 100, 20)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1b44506-652b-4345-8482-b89e4b1de167",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a"
+   ]
   }
  ],
  "metadata": {
