--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -1402,13 +1402,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "id": "f1b44506-652b-4345-8482-b89e4b1de167",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([44, 64, 36, 70, 88, 88, 12, 58, 46, 88])"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "a"
+    "# even numbers\n",
+    "a[a % 2 == 0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "fb65a644-8b73-466b-bdfe-505b8c0437c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([47, 67, 67,  9, 83, 21, 87, 65, 39, 87])"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# odd numbers\n",
+    "a[a % 2 == 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "db154c00-7337-4541-b8e1-bb8a1461892e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([44, 47, 44, 47, 47, 47, 47, 47, 44, 47, 44, 44, 44, 44, 44, 47, 47,\n",
+       "       47, 44, 44])"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# odd numbers?\n",
+    "\n",
+    "a[a % 2]   # fancy indexing, multiple times, of items at indexes 0 + 1!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "e6cc9dfa-8a51-49e0-bf99-093afaa4cccc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 0, 1, 1, 1, 1, 1, 0, 1, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0])"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a % 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af10aa41-d22b-411b-a9e8-bba9f9a7f242",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
