--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -1491,11 +1491,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "id": "af10aa41-d22b-411b-a9e8-bba9f9a7f242",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "57.2"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# mean of odd numbers\n",
+    "a[a % 2 == 1].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "e729660e-3492-4134-8527-f3c0708477ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([64, 67, 67, 83, 87, 70, 88, 88, 65, 87, 88])"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# what numbers are bigger than the mean?\n",
+    "a[a > a.mean()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "917af00e-d517-4141-9fc4-6f9efbd3b2a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([64, 70, 88, 88, 88])"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# what even numbers are bigger than the mean?\n",
+    "a[((a > a.mean()) &\n",
+    "   (a % 2 == 0))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "963d2543-917e-4e5c-a37a-32c697cf22b8",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# what numbers are bigger than mean + std?"
+   ]
   }
  ],
  "metadata": {
