--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -1558,12 +1558,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "id": "963d2543-917e-4e5c-a37a-32c697cf22b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([87, 88, 88, 87, 88])"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# what numbers are bigger than mean + std?\n",
+    "\n",
+    "a[a > (a.mean() + a.std())]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "9728bbfb-7fc7-4eff-a5ab-f743a40a8b83",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "58.3"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "cc6df860-c7ae-47e5-81aa-0312748fe2a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25.088044961694404"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "3a355cd6-8da0-4df2-8b33-0add4671ff95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10, 20, 30, 40, 50])"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([10, 20, 30, 40, 50])\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58f53446-83aa-431d-8bfd-1a4c3d7e0d1d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# what numbers are bigger than mean + std?"
+    "a = np.array([10, 20, 30.5, 40, 50])\n",
+    "a"
    ]
   }
  ],
