--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -1645,13 +1645,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "id": "58f53446-83aa-431d-8bfd-1a4c3d7e0d1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10. , 20. , 30.5, 40.7, 50. ])"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([10, 20, 30.5, 40.7, 50])\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eda9a9a5-3b1b-4af3-ace6-73f4810db66a",
+   "metadata": {},
+   "source": [
+    "# `dtype`\n",
+    "\n",
+    "The `dtype` of an array indicates what kind of data we have in there."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "d02da8ad-0035-4f11-938d-aeea927d4924",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int64')"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([10, 20, 30, 40, 50])\n",
+    "a.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "8a867fc5-7adc-4628-b43b-b8dd84ec7474",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "320"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "64 * 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80598121-3948-472b-80d0-d580e6836c23",
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = np.array([10, 20, 30.5, 40, 50])\n",
-    "a"
+    "import sys\n",
+    "sys.gets"
    ]
   }
  ],
