--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -1672,7 +1672,29 @@
    "source": [
     "# `dtype`\n",
     "\n",
-    "The `dtype` of an array indicates what kind of data we have in there."
+    "The `dtype` of an array indicates what kind of data we have in there.  We can indicate `dtype` with:\n",
+    "\n",
+    "- `np.dtype(TYPE_STRING)`\n",
+    "\n",
+    "For example:\n",
+    "\n",
+    "### Integers\n",
+    "- int64\n",
+    "- int32\n",
+    "- int16\n",
+    "- int8\n",
+    "\n",
+    "### Unsigned ints\n",
+    "- uint64\n",
+    "- uint32\n",
+    "- uint16\n",
+    "- uint8\n",
+    "\n",
+    "### Floats\n",
+    "- float64\n",
+    "- float32\n",
+    "- float16\n",
+    "\n"
    ]
   },
   {
@@ -1720,13 +1742,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "id": "80598121-3948-472b-80d0-d580e6836c23",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "224"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.getsizeof(10) * 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc94cc77-e26c-4801-8bb0-8c8822339669",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.gets"
+    "a = np.array([10, 20, 30, 40, 50])\n",
+    "a.dtype"
    ]
   }
  ],
