--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -1694,7 +1694,8 @@
     "- float64\n",
     "- float32\n",
     "- float16\n",
-    "\n"
+    "\n",
+    "We can specify the `dtype` when we create an array, by passing `dtype=np.dtype(STRING)`"
    ]
   },
   {
@@ -1764,14 +1765,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "id": "dc94cc77-e26c-4801-8bb0-8c8822339669",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int64')"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = np.array([10, 20, 30, 40, 50])\n",
     "a.dtype"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "aa9d56f1-bc59-435a-8be0-2298f0ac821e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int8')"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([10, 20, 30, 40, 50], dtype=np.dtype('int8'))\n",
+    "a.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "fd0ed30d-d8f3-49b6-8844-fc87183047c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10, 20, 30, 40, 50], dtype=int8)"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "05483a0c-8989-4f77-9e27-5496cf08cc76",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 100,  -56,   44, -112,  -12], dtype=int8)"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a * 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4557a951-0905-49fa-b9d8-528477906c3e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
