--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -1909,7 +1909,9 @@
    "cell_type": "code",
    "execution_count": 111,
    "id": "f99a6b05-1483-48d4-a210-f1ab6263c9d8",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1928,11 +1930,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 112,
+   "id": "4110412a-21c3-4826-a462-f7a893ad8b27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array([10, 20, 30, 40, 50])\n",
+    "a.dtype = np.dtype('int16')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "756dfaec-4306-4550-9a23-8f09e75b25ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10,  0,  0,  0, 20,  0,  0,  0, 30,  0,  0,  0, 40,  0,  0,  0, 50,\n",
+       "        0,  0,  0], dtype=int16)"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6e8e310-be0a-4432-a499-18f0e34e5633",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "056bedba-9b72-4801-b5ab-16d257e02164",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# how can we then change the type?\n",
+    "# we run the \"astype\" method, specifying what we want\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
