--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -1971,15 +1971,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "id": "056bedba-9b72-4801-b5ab-16d257e02164",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10., 20., 30., 40., 50.])"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# how can we then change the type?\n",
     "# we run the \"astype\" method, specifying what we want\n",
-    "\n"
+    "\n",
+    "a = np.array([10, 20, 30, 40, 50])\n",
+    "a.astype(np.float64)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "ec2f64ae-3a2c-4af0-b254-b2298650542e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-24, -48, -72], dtype=int8)"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([1000, 2000, 3000])\n",
+    "a.astype(np.int8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a3ccd96-31ea-4687-ae5a-51a7befaba2c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
