--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -2017,9 +2017,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "60ad1beb-0060-479b-a24c-bf6722b0bf39",
+   "metadata": {},
+   "source": [
+    "# Next time\n",
+    "\n",
+    "- `NaN`\n",
+    "- Pandas -- series, data frame\n",
+    "- Indexing\n",
+    "- `.loc` and `.iloc`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a3ccd96-31ea-4687-ae5a-51a7befaba2c",
+   "id": "d95a4917-b13d-4695-b5f6-1e7f84ea898b",
    "metadata": {},
    "outputs": [],
    "source": []
